--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     </svg>
                     <h1 class="text-5xl font-bold gradient-text">LibreTV</h1>
                 </div>
-                <p class="text-gray-400 mb-8">自由观影，畅享精彩</p>
+                <p class="text-gray-400 mb-8">自由观影，畅享</p>
             </header>
             
             <!-- 搜索区域：默认居中 -->
