--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                         <input type="text" 
                                id="searchInput" 
                                class="w-full bg-[#111] border border-[#333] text-white px-6 py-4 rounded-l-lg focus:outline-none focus:border-white transition-colors" 
-                               placeholder="搜索你喜欢的视频..."
+                               placeholder="小撸怡情大撸伤身..."
                                aria-label="视频搜索框">
                         <button onclick="search()" 
                                 class="px-8 py-4 bg-white text-black font-medium rounded-r-lg hover:bg-gray-200 transition-colors"
